Fixing bugs and retrieve date of schedule
